# cmake_git_clone

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.TXT  README.md  example.cpp
cmake/: GitUtils.cmake
